# SightReadingGenerator

./: .gitignore  LICENSE  Measure.py  Notes.py  README.md  TestMeasure.py  TestNotes.py  pyproject.toml  sightReadingGenerator.py
examples/: usageExample.py
src/: sightReadingGenerator.py
src/SightReadingGenerator/: Measure.py  __init__.py  sightReadingGenerator.py
tests/: TestMeasure.py  TestNotes.py
